@@ -25,6 +25,11 @@ dependencies {
 //    runtimeOnly(project(":frontend"))
 }
 
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
